--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,19 @@ dependencies:
   shared_preferences: 0.4.3
   cached_network_image: 0.5.1
   intl: ^0.15.7
+  universal_widget: ^1.2.5
+  image_picker: 0.4.12+1
+#  flutter_record: ^0.3.1
+#  rich_alert 0.1.32
+#  flutter_backdrop: ^1.0.3
+#  card_settings: ^1.4.1
+#  contacts_service: ^0.2.1
+#  progress_indicators: ^0.1.2
+#  animated_text_kit: ^1.3.0
+#  keyboard_visibility: ^0.5.1
+#  folding_cell: ^0.1.1
+#  polygon_clipper: ^1.0.1
+#  flip_panel: ^1.0.0
 
 dev_dependencies:
   flutter_test:
