--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   intl: ^0.15.7
   universal_widget: ^1.2.5
   image_picker: 0.4.12+1
+  device_info: ^0.4.0+1
+  font_awesome_flutter: ^8.4.0
+  flutter_sound: 1.2.1
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32
 #  flutter_backdrop: ^1.0.3
