--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -36,6 +36,7 @@ dependencies:
   device_info: ^0.4.0+1
   font_awesome_flutter: ^8.4.0
   flutter_sound: 1.2.1
+  audioplayers: ^0.8.0
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32
 #  flutter_backdrop: ^1.0.3
