--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   flutter_sound: 1.2.1
   audioplayers: ^0.8.0
+  # file_picker: ^1.3.4+1
+  open_file: 1.3.0
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32
 #  flutter_backdrop: ^1.0.3
@@ -52,7 +54,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
