--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # file_picker: ^1.3.4+1
   open_file: 1.3.0
   url_launcher: ^5.0.2
+  # simple_permissions: ^0.1.9
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32
 #  flutter_backdrop: ^1.0.3
