--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.12.0+2
   cupertino_icons: ^0.1.2
   cloud_firestore: 0.8.2+3
   firebase_core: 0.2.5+1
@@ -29,7 +30,7 @@ dependencies:
   path_provider: 0.4.1
   flutter_masked_text: ^0.7.0
   shared_preferences: 0.4.3
-  cached_network_image: 0.5.1
+  # cached_network_image: 0.5.1
   intl: ^0.15.7
   universal_widget: ^1.2.5
   image_picker: 0.4.12+1
