--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,34 +20,34 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   http: ^0.12.0+2
   cupertino_icons: ^0.1.2
-  cloud_firestore: 0.8.2+3
-  firebase_core: 0.2.5+1
-  firebase_auth: 0.7.0
-  firebase_storage: 1.0.4
-  firebase_messaging: 2.1.0
-  firebase_analytics: 1.1.0
+  cloud_firestore: ^0.12.9
+  firebase_core: ^0.4.0+8
+  firebase_auth: ^0.14.0
+  firebase_storage: ^3.0.4
+  firebase_messaging: ^5.1.2
+  firebase_analytics: ^4.0.2
 #  firebase_admob: 0.7.0
-  path_provider: 0.4.1
-  flutter_masked_text: ^0.7.0
-  shared_preferences: 0.4.3
+  path_provider: ^1.2.0
+  flutter_masked_text: ^0.8.0
+  shared_preferences: ^0.5.3+4
   # cached_network_image: 0.5.1
-  intl: ^0.15.7
+  intl: ^0.15.8
   universal_widget: ^1.2.5
-  image_picker: 0.4.12+1
+  image_picker: ^0.6.1
   device_info: ^0.4.0+1
   font_awesome_flutter: ^8.4.0
-  flutter_sound: 1.2.1
-  audioplayers: ^0.8.0
+  flutter_sound: ^1.4.2
+  audioplayers: ^0.13.1
   # file_picker: ^1.3.4+1
-  open_file: 1.3.0
-  url_launcher: ^5.0.2
+  open_file: ^2.0.3
+  url_launcher: ^5.1.2
   # simple_permissions: ^0.1.9
 #  flutter_record: ^0.3.1
-#  rich_alert 0.1.32
+#  rich_alert 0.1.32 
 #  flutter_backdrop: ^1.0.3
 #  card_settings: ^1.4.1
 #  contacts_service: ^0.2.1
-#  progress_indicators: ^0.1.2
+#  progress_indicators: ^0.1.2 
 #  animated_text_kit: ^1.3.0
 #  keyboard_visibility: ^0.5.1
 #  folding_cell: ^0.1.1
