--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # file_picker: ^1.3.4+1
   open_file: ^2.0.3
   url_launcher: ^5.1.2
+  # contacts_service: ^0.3.4
+  # permission: ^0.1.3
   # simple_permissions: ^0.1.9
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32 
