--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   url_launcher: ^5.1.2
   # contacts_service: ^0.3.4
   permission: ^0.1.3
-  pin_input_text_field: ^2.0.2
+  pin_code_text_field: ^1.4.0
+  # pin_input_text_field: ^2.0.2
   # simple_permissions: ^0.1.9
 #  flutter_record: ^0.3.1
 #  rich_alert 0.1.32 
